feat: user authentication (#20)
* feat: register and indexes

* refactor: replace username with email and add confirm password

* refactor: move register to its own module

* feat: login

* feat: add middleware

* feat: logout

* fix: handle tx err

* chore: api docs
